Add kanata; update tmux; update nvim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,14 @@
+# colors
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# prefix
 unbind C-b
-set-option -g prefix M-a
-bind-key M-a send-prefix
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# window naming
+set-option -g allow-rename off
+bind B break-pane
 
 # split panes
 bind s split-window -v
@@ -14,4 +20,24 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 bind p select-pane -l
+set-window-option -g mode-keys vi
+
+# mouse control
+set -g mouse on
+
+# theme
+set -g @catppuccin_flavor 'macchiato'
+set -g @catppuccin_window_status_style 'slanted'
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_text "#W"
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+
+set -g status-position top
+set -g status-left '#[fg=#{@thm_lavender}] %H:%M %p '
+set -g status-right '#[fg=#{@thm_crust},bg=#{@thm_teal}] session: #S '
+# Ensure that everything on the right side of the status line
+# is included.
+set -g status-right-length 100
+
 
